<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ui.login.signUp.SignUpFragment">
    <TextView
        android:id="@+id/signUpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/toolbarTitleSpaceTop"
        android:layout_marginBottom="@dimen/spacingSmall"
        android:text="@string/signUpTitle"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintBottom_toTopOf="@+id/signUpContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ScrollView
        android:id="@+id/signUpContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacingSmall"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpTitle"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="@dimen/spacingMedium"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUpEmailLayout"
                style="@style/SignIn.TextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpEmailInput"
                    style="@style/SignIn.Input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signInEmailHint"
                    android:inputType="textEmailAddress"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUpUserNameLayout"
                style="@style/SignIn.TextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacingMedium"
                app:layout_constraintTop_toBottomOf="@+id/signUpEmailLayout"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpUserNameInput"
                    style="@style/SignIn.Input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signUpUserNameHint"
                    android:inputType="textEmailAddress"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUpPasswordLayout"
                style="@style/SignIn.TextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacingMedium"
                app:layout_constraintTop_toBottomOf="@+id/signUpUserNameLayout"
                app:passwordToggleEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpPasswordInput"
                    style="@style/SignIn.Input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signInPasswordHint"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/signUpAgreeTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacingSmall"
                android:layout_marginBottom="@dimen/spacingSmall"
                android:text="@string/signUpAgreeTerms"
                android:textColor="@color/colorTextPrimary"
                android:theme="@style/CheckBox"
                app:layout_constraintBottom_toTopOf="@+id/signUpButton"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signUpPasswordLayout"
                app:layout_constraintVertical_bias="0"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signUpButton"
                style="@style/Button.SignIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacingMedium"
                android:enabled="false"
                android:text="@string/signUpButton"
                app:layout_constraintBottom_toTopOf="@+id/signUpFooter"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

            <TextView
                android:id="@+id/signUpFooter"
                style="@style/SignIn.Footer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacingMedium"
                android:layout_marginRight="@dimen/spacingMedium"
                android:layout_marginBottom="@dimen/spacingHuge"
                android:text="@string/tutorialFooterText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include layout="@layout/view_loading" />

</androidx.constraintlayout.widget.ConstraintLayout>