<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorWhite"
    tools:context=".ui.login.signIn.SignInFragment">

    <TextView
        android:id="@+id/signInTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/toolbarTitleSpaceTop"
        android:layout_marginBottom="@dimen/spacingSmall"
        android:text="@string/signInTitle"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintBottom_toTopOf="@+id/signInContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ScrollView
        android:id="@+id/signInContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacingSmall"
        android:fillViewport="true"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInTitle"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipChildren="false"
            android:padding="@dimen/spacingMedium"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signInFacebook"
                style="@style/Button.Facebook"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacingHuge"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signInGoogle"
                style="@style/Button.Google"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacingSmall"
                android:layout_marginBottom="@dimen/spacingMedium"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signInFacebook"
                />

            <View
                android:id="@+id/separator1"
                style="@style/Separator.Horizontal"
                android:layout_width="0dp"
                android:layout_marginEnd="@dimen/spacingSmall"
                app:layout_constraintBottom_toBottomOf="@+id/signInEmailLabel"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/signInEmailLabel"
                app:layout_constraintTop_toTopOf="@+id/signInEmailLabel"
                />

            <View
                android:id="@+id/separator2"
                style="@style/Separator.Horizontal"
                android:layout_width="0dp"
                android:layout_marginStart="@dimen/spacingSmall"
                app:layout_constraintBottom_toBottomOf="@+id/signInEmailLabel"
                app:layout_constraintLeft_toRightOf="@+id/signInEmailLabel"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/signInEmailLabel"
                />

            <TextView
                android:id="@+id/signInEmailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacingMedium"
                android:text="@string/signInSeparator"
                android:textColor="@color/colorTextPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="@+id/separator1"
                app:layout_constraintRight_toLeftOf="@+id/separator2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signInGoogle"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signInEmailLayout"
                style="@style/SignIn.TextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacingMedium"
                app:layout_constraintTop_toBottomOf="@+id/signInEmailLabel"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signInEmailInput"
                    style="@style/SignIn.Input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signInEmailHint"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signInPasswordLayout"
                style="@style/SignIn.TextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacingMedium"
                app:layout_constraintTop_toBottomOf="@+id/signInEmailLayout"
                app:passwordToggleEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signInPasswordInput"
                    style="@style/SignIn.Input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signInPasswordHint"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/signInForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacingSmall"
                android:layout_marginBottom="@dimen/spacingSmall"
                android:padding="@dimen/spacingMedium"
                android:text="@string/signInForgotPassword"
                android:textColor="@color/colorTextPrimary"
                app:layout_constraintBottom_toTopOf="@+id/signInButton"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signInPasswordLayout"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signInButton"
                style="@style/Button.SignIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacingMedium"
                android:enabled="false"
                android:text="@string/signInButton"
                app:layout_constraintBottom_toTopOf="@+id/signInFooter"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

            <TextView
                android:id="@+id/signInFooter"
                style="@style/SignIn.Footer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacingMedium"
                android:layout_marginRight="@dimen/spacingMedium"
                android:layout_marginBottom="@dimen/spacingHuge"
                android:text="@string/tutorialFooterText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include layout="@layout/view_loading" />
</androidx.constraintlayout.widget.ConstraintLayout>