<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.presentation.PresentationFragment"
    tools:background="@drawable/bg_main_gradient"
    android:background="@drawable/bg_main_gradient"
    >
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/presentationViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="ltr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/presentationSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacingMedium"
        android:layout_marginEnd="@dimen/spacingSmall"
        android:layout_marginBottom="@dimen/spacingMedium"
        android:background="@drawable/bg_dialog_white"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:textColor="@color/black"
        android:text="@string/tutorialSignInButton"
        app:layout_constraintBottom_toTopOf="@+id/presentationFooter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/presentationSignUp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/presentationSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacingSmall"
        android:layout_marginEnd="@dimen/spacingMedium"
        android:layout_marginBottom="@dimen/spacingMedium"
        android:background="@drawable/bg_button_gradient"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:textColor="@color/colorAccent"
        android:text="@string/tutorialSignUpButton"
        app:layout_constraintBottom_toTopOf="@+id/presentationFooter"
        app:layout_constraintLeft_toRightOf="@+id/presentationSignIn"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/presentationFooter"
        style="@style/TextView.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacingMedium"
        android:layout_marginRight="@dimen/spacingMedium"
        android:layout_marginBottom="@dimen/spacingHuge"
        android:text="@string/tutorialFooterText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
        android:id="@+id/presentationDotsIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacingHuge"
        app:dotsColor="#fff"
        app:dotsCornerRadius="@dimen/tutorialDotCornerRadius"
        app:dotsSize="@dimen/tutorialDotSize"
        app:dotsSpacing="4dp"
        app:dotsWidthFactor="2.5"
        app:layout_constraintBottom_toTopOf="@+id/presentationSignUp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:progressMode="true"
        app:selectedDotColor="@color/colorPrimary"
        />

    <ImageView
        android:id="@+id/presentationLogo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/ic_innovations"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        />

    <TextView
        android:id="@+id/presentationLogoTitle"
        style="@style/Tutorial.LogoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/presentationLogo"
        tools:text="@string/tutorialLogoText"
        />


</androidx.constraintlayout.widget.ConstraintLayout>